# prysm

beacon-chain/attestation/: service.go
beacon-chain/blockchain/: fork_choice.go  service.go
beacon-chain/chaintest/state-replay/: BUILD.bazel  main.go
beacon-chain/core/balances/: rewards_penalties.go  rewards_penalties_test.go
beacon-chain/core/epoch/: epoch_operations.go  epoch_operations_test.go  epoch_processing.go  epoch_processing_test.go
beacon-chain/core/helpers/: BUILD.bazel  committee.go  committee_test.go
beacon-chain/core/state/: transition.go
beacon-chain/core/validators/: validator.go
beacon-chain/db/: state.go  validator.go  verify_contract.go
beacon-chain/powchain/: service.go
beacon-chain/rpc/: beacon_server.go  proposer_server.go  service.go  validator_server.go  validator_server_test.go
beacon-chain/sync/: querier.go  regular_sync.go  service.go
k8s/beacon-chain/: beacon-chain.deploy.yaml  beacon-config.config.yaml  validator.deploy.yaml
proto/beacon/p2p/v1/: messages.pb.go  messages.proto  types.proto
~/Documents/Prysmatic/Testing/node0/: beaconchain.db
