load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain/chaintest/state-replay",
    visibility = ["//visibility:private"],
    deps = [
        "//beacon-chain/attestation:go_default_library",
        "//beacon-chain/blockchain:go_default_library",
        "//beacon-chain/db:go_default_library",
        "//beacon-chain/powchain:go_default_library",
        "//shared/featureconfig:go_default_library",
        "//shared/params:go_default_library",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//ethclient:go_default_library",
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "state-replay",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
